force-app/main/default/objects/Contract/fields/Comentarii__c.field-meta.xml
<CustomField>
    <fullName>Comentarii__c</fullName>
    <label>Comentarii</label>
    <length>255</length>
    <type>Text</type>
</CustomField>