force-app/main/default/objects/Contract/fields/CUI__c.field-meta.xml
<CustomField>
    <fullName>CUI__c</fullName>
    <label>CUI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>