force-app/main/default/objects/Contract/fields/Data_inceput__c.field-meta.xml
<CustomField>
    <fullName>Data_inceput__c</fullName>
    <label>Data inceput</label>
    <type>Date</type>
</CustomField>