force-app/main/default/objects/Contract/fields/Data_semnare_contract__c.field-meta.xml
<CustomField>
    <fullName>Data_semnare_contract__c</fullName>
    <label>Data semnare contract</label>
    <type>Date</type>
</CustomField>