force-app/main/default/objects/Contract/fields/Responsabil_Fabryo__c.field-meta.xml
<CustomField>
    <fullName>Responsabil_Fabryo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsabil Fabryo</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contracts3</relationshipName>
    <type>Lookup</type>
</CustomField>