force-app/main/default/objects/Contract/fields/Termen_de_plata__c.field-meta.xml
<CustomField>
    <fullName>Termen_de_plata__c</fullName>
    <label>Termen de plata</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>La termen</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>Pe loc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>